[project]
name = "ai-data-analyst-2"
version = "0.1.0"
description = "Data Seeker: natural-language analytics over SQL databases with chart-ready answers"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "altair>=5.5.0",
    "graphviz>=0.20.3",
    "networkx>=3.5",
    "openai>=1.97.0",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
    "streamlit>=1.50.0",
]
